[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/Rock.gd" type="Script" id=1]
[ext_resource path="res://World/Rock.tscn" type="PackedScene" id=2]

[node name="Inside" type="Node2D"]

[node name="Rock" type="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 80 )
script = ExtResource( 1 )

[node name="Rock2" type="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 96 )
script = ExtResource( 1 )

[node name="Rock3" type="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 112 )
script = ExtResource( 1 )

[node name="Rock4" type="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 224, 128 )
script = ExtResource( 1 )

[node name="Rock5" type="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 80 )
script = ExtResource( 1 )

[node name="Rock6" type="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 96 )
script = ExtResource( 1 )

[node name="Rock7" type="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 112 )
script = ExtResource( 1 )

[node name="Rock8" type="StaticBody2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 96, 128 )
script = ExtResource( 1 )
